next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
------------------------------------------------- 

- Applied patch for ticket (symbol writing issues) (#3589)

- Added WMS GetFeatureInfo Cascading (#3764)

- Fixed png lib is not found on multiarch systems (#3921)

- Fixed PHP MapScript opacity property of StyleObj no longer works (#3920)

- Fixed Using STYLEITEM AUTO, loadExpression fails when the label text
  contains a space or begins with a double quote (#3481)

- Fix for the cluster processing if the shape bounds doesn't overlap 
  with the given extent (#3913)

- Union layer 3 new processing options added (#3900)

- Changed msRemoveStyle to allow removing all styles (#3895)

- Fixed mssql2008 to return correct geometries with chart layer type (#3894)

- Ensure msLayerSetProcessingKey() supports setting a NULL value to clear
  a processing key. 

- Write SYMBOLSET/END tags when saving a symbol file (#3885)

- Make java threadtests work again (#3887)

- Fix segfault on malformed <PropertyIsLike> filters (#3888)

- Fixed the query handling problem with the Oracle spatial driver (#3878)

- Fixed potential crash with AVERAGE resampling and crazy reprojection (#3886)

- Adjusted OperationsMetadata for POST in WCS 2.0 GetCapabilities response

- Fix for the warnings in mapunion.c (#3880)

- SLD: correct when same layer is used with multiple styles (#1602)

- Fixed the build problem in mapunion.c (#3877)

- Implement to get all shapes with the clustered layer (#3873)

- Union layer: Fixed the crash when styling source layers using attributes (#3870)

- Added GEOS difference operator to expression support (#3871) 

- Improve rangeset item checking so that Bands=1,2,3 is supported with WCS 1.0
  (#3919).
